# mlir-tutorial

./: .gitignore  CMakeLists.txt  README.md  build.sh  matmul-opt.cpp  pass_pipeline_example.sh
examples/: matmul.mlir  matmul_lib.mlir  strength-reduction.mlir
include/Transforms/: GCDTiling.h  Pipeline.h  StrengthReduction.h
lib/Transforms/: CMakeLists.txt  GCDTiling.cpp  Pipeline.cpp  StrengthReduction.cpp
scripts/: benchmark.py  build.sh  env_check.sh  generate_dylibs.sh  pass_pipeline_example.sh  run_example.sh
test/: CMakeLists.txt  gcd-tiling.mlir  lit.cfg.py  lit.site.cfg.py.in
test/Transforms/: gcd-tiling.mlir  loop-optimization.mlir  strength-reduction.mlir
tools/: CMakeLists.txt  sblp-opt.cpp
